--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "bindings": "^1.2.1",
     "nan": "~1.3.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "protobufjs": "murgatroid99/ProtoBuf.js"
   },
   "devDependencies": {
     "mocha": "~1.21.0",
-    "highland": "~2.0.0",
-    "protobufjs": "~3.8.0"
-  }
+    "highland": "~2.0.0"
+  },
+  "main": "main.js"
 }
