--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "async": "^0.9.0",
-    "googleauth": "google/google-auth-library-nodejs",
+    "google-auth-library": "^0.9.2",
     "minimist": "^1.1.0",
     "mocha": "~1.21.0",
     "strftime": "^0.8.2"
