--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "grpc",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Google Inc.",
   "description": "gRPC Library for Node",
+  "homepage": "http://www.grpc.io/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grpc/grpc.git"
+  },
+  "bugs": "https://github.com/grpc/grpc/issues",
   "contributors": [
     {
       "name": "Michael Lumish",
       "email": "mlumish@google.com"
     }
   ],
+  "directories": {
+    "lib": "src",
+    "example": "examples"
+  },
   "scripts": {
     "lint": "node ./node_modules/jshint/bin/jshint src test examples interop index.js",
     "test": "node ./node_modules/mocha/bin/mocha && npm run-script lint"
