--- a/packages/grpc-js-xds/package.json
+++ b/packages/grpc-js-xds/package.json
@@ -45,7 +45,8 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.6.0",
     "google-auth-library": "^7.0.2",
-    "re2-wasm": "^1.0.1"
+    "re2-wasm": "^1.0.1",
+    "vscode-uri": "^3.0.7"
   },
   "peerDependencies": {
     "@grpc/grpc-js": "~1.8.0"
