--- a/packages/grpc-js/package.json
+++ b/packages/grpc-js/package.json
@@ -22,9 +22,15 @@
     "@types/ncp": "^2.0.1",
     "@types/pify": "^3.0.2",
     "@types/semver": "^7.3.9",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/typescript-estree": "^5.59.11",
     "clang-format": "^1.0.55",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "execa": "^2.0.3",
-    "gts": "^3.1.1",
     "gulp": "^4.0.2",
     "gulp-mocha": "^6.0.0",
     "lodash": "^4.17.4",
@@ -32,10 +38,11 @@
     "mocha-jenkins-reporter": "^0.4.1",
     "ncp": "^2.0.0",
     "pify": "^4.0.1",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
-    "ts-node": "^8.3.0",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "contributors": [
     {
@@ -47,11 +54,11 @@
     "clean": "rimraf ./build",
     "compile": "tsc -p .",
     "format": "clang-format -i -style=\"{Language: JavaScript, BasedOnStyle: Google, ColumnLimit: 80}\" src/*.ts test/*.ts",
-    "lint": "npm run check",
+    "lint": "eslint src/*.ts test/*.ts",
     "prepare": "npm run generate-types && npm run compile",
     "test": "gulp test",
-    "check": "gts check src/**/*.ts",
-    "fix": "gts fix src/*.ts",
+    "check": "npm run lint",
+    "fix": "eslint --fix src/*.ts test/*.ts",
     "pretest": "npm run generate-types && npm run generate-test-types && npm run compile",
     "posttest": "npm run check && madge -c ./build/src",
     "generate-types": "proto-loader-gen-types --keepCase --longs String --enums String --defaults --oneofs --includeComments --includeDirs proto/ --include-dirs test/fixtures/ -O src/generated/ --grpcLib ../index channelz.proto",
