Fix missing proto file references

--- a/packages/grpc-js-xds/package.json
+++ b/packages/grpc-js-xds/package.json
@@ -59,6 +59,7 @@
     "build/src/**/*.{js,d.ts,js.map}",
     "deps/envoy-api/envoy/admin/v3/**/*.proto",
     "deps/envoy-api/envoy/config/**/*.proto",
+    "deps/envoy-api/envoy/data/**/*.proto",
     "deps/envoy-api/envoy/service/**/*.proto",
     "deps/envoy-api/envoy/type/**/*.proto",
     "deps/envoy-api/envoy/annotations/**/*.proto",
@@ -66,6 +67,7 @@
     "deps/googleapis/google/api/**/*.proto",
     "deps/googleapis/google/protobuf/**/*.proto",
     "deps/googleapis/google/rpc/**/*.proto",
+    "deps/protoc-gen-validate/**/*.proto",
     "deps/xds/udpa/annotations/**/*.proto",
     "deps/xds/udpa/type/**/*.proto",
     "deps/xds/xds/annotations/**/*.proto",
