docs(grpc-reflection): moved example to common directory and match grpc-go server

--- a/examples/package.json
+++ b/examples/package.json
@@ -7,6 +7,7 @@
     "google-protobuf": "^3.0.0",
     "@grpc/grpc-js": "^1.8.0",
     "@grpc/grpc-js-xds": "^1.8.0",
+    "@grpc/reflection": "^1.0.0",
     "lodash": "^4.6.1",
     "minimist": "^1.2.0"
   }
