--- a/packages/proto-loader/package.json
+++ b/packages/proto-loader/package.json
@@ -59,6 +59,7 @@
     "clang-format": "^1.2.2",
     "gts": "^3.1.0",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "~4.7.4"
   },
   "engines": {
